# Racetiming

./: .gitignore  Docker-compose.yml  Dockerfile.db  Dockerfile.www  README.md  docker-compose.yml
Racetiming/: Racetiming.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: initdb.sql
db/: schema.sql
firmware/arduino/sketch/: SparkFun_UHF_RFID_Reader.cpp  SparkFun_UHF_RFID_Reader.h  sketch.ino
software/: .gitignore
software/src/: CMakeLists.txt  ColumnIndexSortFilterProxyModel.h  NumberSummarySortFilterProxyModel.cpp  NumberSummarySortFilterProxyModel.h  PushButtonDelegate.h  RacesTableModel.cpp  RacesTableModel.h  RunnersModel.cpp  RunnersModel.h  RunnersTableModel.cpp  RunnersTableModel.h  activerunnersform.cpp  activerunnersform.h  activerunnersform.ui  m6erfidreader.cpp  m6erfidreader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qserialportcombobox.cpp  qserialportcombobox.h  racetiminginterface.cpp  racetiminginterface.h  racetimingtypes.h  tagwriterwindow.cpp  tagwriterwindow.h  tagwriterwindow.ui
software/src/LibRFIDRW/: CMakeLists.txt
software/src/LibRFIDRW/include/RFIDRW/: IRFIDRW.h  RFIDRW.h
software/src/LibRFIDRW/src/: RFIDRW.cpp  m6enano.cpp  m6enano.h
software/src/LibRFIDReaders/: CMakeLists.txt
software/src/LibRFIDReaders/include/RFIDReaders/: IRFIDReader.h  RFIDReaders.h
software/src/LibRFIDReaders/src/: RFIDReaders.cpp  m6erfidreader.cpp  m6erfidreader.h
software/src/LibRacetimingInterface/: CMakeLists.txt
software/src/LibRacetimingInterface/include/RacetimingInterface/: IRacetimingInterface.h  RacetimingInterface.h  RacetimingTypes.h
software/src/LibRacetimingInterface/src/: LocalRacetimingInterface.cpp  LocalRacetimingInterface.h  RacetimingInterface.cpp  TestRacetimingInterface.cpp  TestRacetimingInterface.h  WebRacetimingInterface.cpp  WebRacetimingInterface.h
software/src/LibTagReaders/: CMakeLists.txt
software/src/LibTagReaders/include/TagReaders/: ITagReader.h  TagReaders.h
software/src/LibTagReaders/src/: TagReaders.cpp  m6enano.cpp  m6enano.h
www/: _adminpage.php  _footer.php  _header.php  _init.php  addevent.php  addevent_rest.php  addnumber.php  addrace.php  addrunner.php  addtag.php  addtag_rest.php  admin.php  deleteevents.php  deletenumbers.php  deleterace.php  deleterunner.php  deleterunners.php  deletetags.php  editrace.php  generatetimetable.php  getraceinfo.php  getraces_rest.php  getrunners_rest.php  index.php  info.php  insertevent.php  insertnumber.php  insertrace.php  insertrunner.php  inserttag.php  listadmins.php  listevents.php  listnumbers.php  listraces.php  listrunners.php  listtags.php  listtimes.php  login.php  logout.php  randomizetags.php
www/config/: config.ini  config_example.ini
